--- a/Script_02_Analyzer.Rmd
+++ b/Script_02_Analyzer.Rmd
@@ -10,8 +10,8 @@ output: pdf_document
 
 library(tidyverse)
 library(gtsummary)
-library(tidyverse)
-library(janitor)
+library(rstatix)
+#library(janitor)
 library(kableExtra)
 # install.packages('tinytex')
 # tinytex::install_tinytex() # latex for pdf file creation
@@ -25,40 +25,26 @@ load(in_file)
 rm(in_file)
 
 data_individual <- data_individual %>% 
-  mutate(Group=fct_rev(Group))
-
-trial_file <- "WP6_data/WP6_trial_data.Rdata"
-load(trial_file)
-rm(trial_file)
+  mutate(groupNo=factor(groupNo, levels=c(1,0), labels=c("ALS", "Ctrl")))
 
 ```
 
 
-## Sample demographics
+# Sample demographics
 Cross-sectional comparison between
 
-* ALS (n = `r length(unique(data_individual$ID[data_individual$Group=="ALS"]))`) 
-* Control (n = `r length(unique(data_individual$ID[data_individual$Group=="Ctrl"]))`)
+* ALS (n = `r length(unique(data_individual$id[data_individual$groupNo=="1"]))`) 
+* Control (n = `r length(unique(data_individual$id[data_individual$groupNo=="0"]))`)
 
 
 ```{r demo_all, echo=F, message=F, warning=F}
 
 t1 <- data_individual %>% 
-  select(Group, dfb_q1_sex, dfb_q2_age, dfb_q3_years_school_clean, dfb_q3_years_edu_total,
-         dfb_q5_language_german, dfb_q6_handiness, dfb_q21_comp_expertise, dfb_q22_comp_freq, 
-         sbsds_total_score) %>%  
-  tbl_summary(by=Group, 
-              label=list(dfb_q1_sex ~ "Gender", dfb_q2_age ~ "Age", 
-                         dfb_q3_years_school_clean ~ "Years schooling",
-                         dfb_q3_years_edu_total ~ "Years total education",
-                         dfb_q5_language_german ~ "German native speaker", 
-                         dfb_q6_handiness ~ "Handedness", 
-                         dfb_q21_comp_expertise ~ "Self-rated computer expertise", 
-                         dfb_q22_comp_freq ~ "Self-rated computer use frequency",
-                         sbsds_total_score ~ "Self-rated spatial abilities (SBSDS)"),
-              type=list(dfb_q3_years_school_clean ~ 'continuous',
-                        dfb_q21_comp_expertise ~ 'continuous', 
-                        dfb_q22_comp_freq  ~ 'continuous'),
+  select(groupNo, sex, ageYears, educationYears, languageGerman, SantaBarbaraSenseOfDirectionScale) %>%  
+  tbl_summary(by=groupNo, 
+              label=list(sex ~ "Sex", ageYears ~ "Age", educationYears ~ "Years total education",
+                         languageGerman ~ "German native speaker", 
+                         SantaBarbaraSenseOfDirectionScale ~ "Self-rated spatial abilities (SBSDS)"),
               statistic=list(all_continuous() ~ "{median} (IQR: {p25}-{p75})",
                              all_categorical() ~ "{n} ({p}%)"),
               digits=list(all_continuous() ~ c(1, 2, 1, 1)),
@@ -77,15 +63,11 @@ t1 %>% as_flex_table()
 ```{r demo_clinical, echo=F, message=F, warning=F}
 
 t2 <- data_individual %>% 
-  filter(Group=="ALS") %>% 
-  select(MN, MNE_Untergruppe, ALS_Variante, `ALS-FRS-R`, `FRS-/Monat`,
-         is_category, id_t1_months, is_t1_months) %>% 
-  tbl_summary(label=list(MN ~ "Motor neuron involvement", 
-                         MNE_Untergruppe ~ "MND subgroup", 
-                         ALS_Variante ~ "ALS variant",
-                         is_category ~ "Initial symptoms", 
-                         id_t1_months ~ "Time from diagnosis (months)",
-                         is_t1_months ~ "Time from initial symptoms (months)"),
+  filter(groupNo=="ALS") %>% 
+  select(MN_involvement, `ALSFRS-R`, `ALSFRS-R progression/month`, months_symptoms, months_diagnosis) %>% 
+  tbl_summary(label=list(MN_involvement ~ "MN involvement", 
+                         months_symptoms ~ "Months since inital symptoms",
+                         months_diagnosis ~ "Months since diagnosis"),
               statistic=list(all_continuous() ~ "{median} (IQR: {p25}-{p75})",
                              all_categorical() ~ "{n} ({p}%)"),
               digits=list(all_continuous() ~ c(1, 1))) %>% 
@@ -100,7 +82,9 @@ t2 %>% as_flex_table()
 
 ```
 
-## Results scoring (drawing) task
+# Results 
+
+## Post-navigational scoring 
 
 ```{r results_scoring, echo=F, message=F, warning=F}
 
@@ -109,17 +93,16 @@ effect_size <- function(data, variable, by, ...) {
 }
 
 t3 <- data_individual %>% 
-  select(Group, Object_identity_manual_s, Object_location_SQRTCanOrg_s,
-         Maze_reconstruction_manual_s) %>% 
-  tbl_summary(by=Group,
+  select(groupNo, POST_mazeReconstruction, POST_objectIdentity, POST_objectLocation) %>% 
+  tbl_summary(by=groupNo,
               type=list(everything() ~ 'continuous'),
-              label=list(Object_identity_manual_s ~ "Object identity", 
-                         Object_location_SQRTCanOrg_s ~ "Object location", 
-                         Maze_reconstruction_manual_s ~ "Maze reconstruction"),
+              label=list(POST_objectIdentity ~ "Object identity", 
+                         POST_objectLocation ~ "Object location", 
+                         POST_mazeReconstruction ~ "Maze reconstruction"),
               statistic=list(all_continuous() ~ "{median} ({p25}-{p75})"),
               digits=list(all_continuous() ~ c(2, 2)),
               missing="no") %>% 
-    add_stat(fns=everything() ~ effect_size) %>%
+  add_stat(fns=everything() ~ effect_size) %>%
   add_p(test=list(everything() ~ "wilcox.test"), 
         pvalue_fun=function(x) style_number(x, digits=3)) %>%  
   modify_header(list(label="**Post-navigation memory**", add_stat_1="**effect size**"))
@@ -132,7 +115,7 @@ t3 %>% as_flex_table()
 
 ```
 
-## Results neuropsychology 
+## Neuropsychological data 
 
 ```{r results_np, echo=F, message=F, warning=F}
 
@@ -141,23 +124,21 @@ effect_size <- function(data, variable, by, ...) {
 }
 
 t4 <- data_individual %>% 
-  select(Group, ECAS_sub_executive, ECAS_sub_verbal_fluency, ECAS_sub_language,
-         ECAS_sub_memory, ECAS_sub_spatial, 
-         SPART_mean_I, SPART_mean_II, SPART_mean_all, 
-         FIVE_P_productivity, 
-         PTSOT_mean_dev) %>% 
-  tbl_summary(by=Group,
+  select(groupNo, ECAS_executive, ECAS_verbalFluency, ECAS_language, ECAS_verbalMemory, ECAS_visuospatial, 
+         SPART_immediateMemory, SPART_delayedMemory, SPART_overallMemory, 
+         `5PT`, PTSOT) %>% 
+  tbl_summary(by=groupNo,
               type=list(everything() ~ 'continuous'),
-              label=list(ECAS_sub_executive ~ "ECAS executive",
-                         ECAS_sub_verbal_fluency ~ "ECAS fluency",
-                         ECAS_sub_language ~ "ECAS language",
-                         ECAS_sub_memory ~ "ECAS memory", 
-                         ECAS_sub_spatial ~ "ECAS visuospatial", 
-                         SPART_mean_I ~ "SPART immediate",
-                         SPART_mean_II ~ "SPART delayed",
-                         SPART_mean_all ~ "SPART memory",
-                         FIVE_P_productivity ~ "5PT fluency",
-                         PTSOT_mean_dev ~ "PTSOT orientation"),
+              label=list(ECAS_executive ~ "ECAS executive",
+                         ECAS_verbalFluency ~ "ECAS fluency",
+                         ECAS_language ~ "ECAS language",
+                         ECAS_verbalMemory ~ "ECAS memory", 
+                         ECAS_visuospatial ~ "ECAS visuospatial", 
+                         SPART_immediateMemory ~ "SPART immediate",
+                         SPART_delayedMemory ~ "SPART delayed",
+                         SPART_overallMemory ~ "SPART total memory",
+                         `5PT` ~ "5PT fluency",
+                         PTSOT ~ "PTSOT orientation"),
               statistic=list(everything() ~ "{median} ({p25}-{p75})"),
               digits=list(everything() ~ c(2, 2)),
               missing="no") %>% 
@@ -174,14 +155,14 @@ t4 %>% as_flex_table()
 
 ```
 
-```{r results_np_ci1, echo=F, message=F, warning=F}
+```{r results_np_impairment, echo=F, message=F, warning=F}
 
 temp <- data_individual %>% 
-  select(ID, Group, ends_with("below_cut"))
+  select(id, groupNo, ends_with("below_cut"))
 
 t5 <- temp %>% 
-  select(-ID) %>% 
-  tbl_summary(by=Group) %>% 
+  select(-id) %>% 
+  tbl_summary(by=groupNo) %>% 
   add_n()
 
 t5 %>% as_flex_table()
@@ -191,24 +172,25 @@ temp <- temp %>%
 
 ```
 
-Participants below executive cut-off: `r temp$ID[temp$ECAS_sub_executive_below_cut]`
+Participants below executive cut-off: `r temp$id[temp$ECAS_sub_executive_below_cut]`
 
-Participants below fluency cut-off: `r temp$ID[temp$ECAS_sub_verbal_fluency_below_cut]`
+Participants below fluency cut-off: `r temp$id[temp$ECAS_sub_verbal_fluency_below_cut]`
 
-Participants below language cut-off: `r temp$ID[temp$ECAS_sub_language_below_cut]`
+Participants below language cut-off: `r temp$id[temp$ECAS_sub_language_below_cut]`
 
-Participants below memory cut-off: `r temp$ID[temp$ECAS_sub_memory_below_cut]`
+Participants below memory cut-off: `r temp$id[temp$ECAS_sub_memory_below_cut]`
 
-Participants below visuospatial cut-off: `r temp$ID[temp$ECAS_sub_spatial_below_cut]`
+Participants below visuospatial cut-off: `r temp$id[temp$ECAS_sub_spatial_below_cut]`
 
 
 ## Correlations
+
 ```{r results_correlation, echo=F, message=F, warning=F}
 
-temp <- data_individual  %>% select(ID, Group, ECAS_total_score, ECAS_sub_memory, 
+temp <- data_individual  %>% select(id, groupNo, ECAS_total_score, ECAS_sub_memory, 
                                     dfb_q1_sex, dfb_q2_age, dfb_q3_years_edu_total,
                                     `ALS-FRS-R`, `FRS-/Monat`, is_t1_months, id_t1_months) %>%
-  drop_na(ECAS_sub_memory) %>% filter(Group=="ALS")
+  drop_na(ECAS_sub_memory) %>% filter(groupNo=="ALS")
 
 ggplot(temp, aes(x=`ALS-FRS-R`, y=ECAS_total_score)) + geom_smooth(method="lm") + geom_point()
 cor.test(temp$ECAS_total_score, temp$`ALS-FRS-R`, method="spearman")
@@ -243,95 +225,7 @@ rm(m0)
 ```
 
 
-## Regressions
-
-```{r result_regression, include=F, message=F, warning=F }
-
-sm_avg_condition <- trial_data %>%
-  filter(feedback=="false", trial_condition %in% c(1,2,3), 
-         trial_type!="probe_allo_startE") %>%
-  group_by(id, trial_condition) %>%
-  mutate(trial_condition=factor(case_when(trial_condition==1 ~ "allo", 
-                                          trial_condition==2 ~ "ego", 
-                                          TRUE ~ "mixed"))) %>% 
-  summarize(avgSuccess=mean(success)) %>%
-  pivot_wider(id_cols = c(id),
-              names_prefix = "avgSuccess_", 
-              names_from = trial_condition,
-              values_from = c(avgSuccess))
-
-sm_avg_total <- trial_data %>%
-  filter(feedback=="false", trial_condition %in% c(1,2,3), 
-         trial_type!="probe_allo_startE") %>%
-  group_by(id) %>%
-  summarize(avgSuccess_total=mean(success))
-
-
-data_joint <- data_individual %>% 
-  left_join(sm_avg_condition, by = c("ID"="id")) %>% 
-  left_join(sm_avg_total, by = c("ID"="id"))
-
-rm(sm_avg_condition, sm_avg_total)
-
-```
-
-## demographics and clinical markers
-
-``` {r result_regression1, echo=F, message=F, warning=F }
-
-m1 <- glm(avgSuccess_total ~ dfb_q1_sex + dfb_q2_age + dfb_q3_years_edu_total +
-            MNE_Untergruppe + `ALS-FRS-R` + `FRS-/Monat` + is_t1_months, data=data_joint) 
-#plot(m1)
-summary(m1)
-performance::r2(m1)
-
-rm(m1)
-
-```
-
-## neuropsychology
-
-``` {r result_regression2, echo=F, message=F, warning=F }
-m2 <- glm(avgSuccess_total ~ ECAS_sub_executive + ECAS_sub_verbal_fluency + 
-            ECAS_sub_spatial + ECAS_sub_memory + ECAS_sub_language +
-            FIVE_P_productivity + SPART_mean_all + PTSOT_mean_dev, data=data_joint)
-#plot(m2)
-summary(m2)
-performance::r2(m2)
-
-rm(m2)
-
-```
-
-## task-related  
-
-``` {r result_regression3, echo=F, message=F, warning=F }
-m3 <- glm(avgSuccess_total ~ Object_identity_manual_s + 
-            Object_location_SQRTCanOrg_s + 
-            Maze_reconstruction_manual_s, data=data_joint)
-#plot(m3)
-summary(m3)
-performance::r2(m3)
-
-m3a <- glm(avgSuccess_ego ~ Object_identity_manual_s + 
-             Object_location_SQRTCanOrg_s +
-             Maze_reconstruction_manual_s, data=data_joint)
-#plot(m3a)
-summary(m3a)
-performance::r2(m3a)
-
-m3b <- glm(avgSuccess_allo ~ Object_identity_manual_s + 
-             Object_location_SQRTCanOrg_s + 
-             Maze_reconstruction_manual_s, data=data_joint)
-#plot(m3b)
-summary(m3b)
-performance::r2(m3b)
-
-rm(m3, m3a, m3b)
-
-```
-
-## Recruting 
+# Recruting 
 
 ```{r recruiting, echo=F, message=F, warning=F}
 
@@ -353,7 +247,7 @@ names_invite <- do.call(rbind.data.frame, mysheets) %>%
   unite(Vorname, Nachname, col="Name", sep=" ") %>% 
   arrange(Name) 
 
-filename2 <- "WP6_data/WP6_ID_List_6200_6399.xlsx"
+filename2 <- "WP6_data/WP6_id_List_6200_6399.xlsx"
 names_participate <- readxl::read_excel(filename2, skip=1, n_max=52, trim_ws = T) %>% 
   select(Name) %>% 
   arrange(Name)
@@ -361,11 +255,11 @@ names_participate <- readxl::read_excel(filename2, skip=1, n_max=52, trim_ws = T
 rm(filename1, filename2, read_sheets)
 ```
 
-### People that were recruited via mail (with help of ALS-Ambulanz)
+## People that were recruited via mail (with help of ALS-Ambulanz)
 N of letters = `r length(names_invite$Name) `
 
 N of respondents = `r length(names_invite$Name[names_invite$Name %in% names_participate$Name]) `
 (`r round(length(names_invite$Name[names_invite$Name %in% names_participate$Name])/length(names_invite$Name)*100, digits=2)`)
 
-### People that were recruited elsewhere (e.g. from the Neurology ward)
+## People that were recruited elsewhere (e.g. from the Neurology ward)
 N of respondents = `r length(names_participate$Name[!names_participate$Name %in% names_invite$Name]) `
